--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,50 +1,79 @@
 version: 2.1
+orbs:
+  sonarcloud: sonarsource/sonarcloud@1.0.3
 jobs:
-  build:
+  buildanddeploy:
     docker:
-      - image: cimg/deploy:2022.07        
-    working_directory: ~/workspace/circleci
-    steps:
-      - checkout
-      # ... steps for building/testing app ...
-
-      - setup_remote_docker:
-          version: 20.10.14
-          docker_layer_caching: true
-
-      # build and push Docker image
-      - run: |
-          TAG=0.1.$CIRCLE_BUILD_NUM
-          docker build -t vijyant97/dev:${TAG} .
-          echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin
-          docker push vijyant97/dev
-
-  deploytoeks:
-    docker:
-      - image: amazon/aws-cli
+      - image: cimg/deploy:2022.07
         environment:
           AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
           AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
           AWS_DEFAULT_REGION: $AWS_REGION
-    working_directory:  ~/workspace/circleci
+    working_directory: ~/workspace/circleci
     steps:
       - checkout
-      - run:
-          name: "Deploying to EKS"
-          command: |
-            yum update -y
-            yum install curl -y
-            curl -o kubectl https://s3.us-west-2.amazonaws.com/amazon-eks/1.22.6/2022-03-09/bin/linux/amd64/kubectl
-            chmod +x ./kubectl
-            mkdir -p $HOME/bin && cp ./kubectl $HOME/bin/kubectl && export PATH=$PATH:$HOME/bin
-            aws eks --region eu-west-1 update-kubeconfig --name go-test-cluster
-            kubectl apply -f service.yaml
-            kubectl apply -f deployment.yaml
-        
+      # ... steps for building/testing app ...
+      # - sonarcloud/scan:
+          
+      #     sonar.projectKey: 'vijyantg_clops_cicd_poc'
+      #     sonar.organization: 'vijyantg'     
+      # sonarcloud scan
+      - setup_remote_docker:
+          version: 20.10.14
+          docker_layer_caching: true
+
+      # build and push Docker image and deploy to aws-eks
+      - run: |
+          sudo apt-get update -y 
+          TAG=0.1.$CIRCLE_BUILD_NUM            
+          docker build -t vijyant97/circleci:${TAG} .
+      - run: |    
+          
+          echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin
+      - run: |
+          
+          # docker pull aquasec/latest
+          # docker run --rm -v ~/workspace/circleci:/root/.cache/ aquasec/trivy:latest vijyant97/circleci:${TAG}
+          # docker run --rm -v /var/run/docker.sock:/var/run/docker.sock \ 
+          # -v $HOME/Library/Caches:/root/.cache/ aquasec/trivy:latest vijyant97/circleci:${TAG}
+          docker run aquasec/trivy image vijyant97/circleci:${TAG} 
+          
+          sudo touch ./trivy.json
+          # docker run ghcr.io/aquasecurity/trivy:latest image vijyant97/circleci:${TAG}  --format json --output ./trivy.json
+          mkdir -p /tmp
+          cp ./trivy.json /tmp/trivy.json
+      # - run: |
+      #     curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/master/contrib/install.sh | sudo sh -s -- -b /usr/local/bin   
+      #     trivy image --severity CRITICAL vijyant97/circleci:${TAG} -o /tmp/trivy.json
+      - store_artifacts:
+          path: /tmp/trivy.json          
+          destination: artifact-file
+      - store_artifacts:
+          path: ./trivy.json          
+          destination: artifact-file
+          
+
+      - run: |    
+          docker push vijyant97/dev:${TAG}
+      - run: |  
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          unzip awscliv2.zip 
+          sudo ./aws/install
+          curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
+          sudo mv /tmp/eksctl /usr/local/bin 
+      - run: |    
+          sudo apt-get update -y          
+          curl -o kubectl https://s3.us-west-2.amazonaws.com/amazon-eks/1.22.6/2022-03-09/bin/linux/amd64/kubectl
+          chmod +x ./kubectl
+          mkdir -p $HOME/bin && cp ./kubectl $HOME/bin/kubectl && export PATH=$PATH:$HOME/bin
+          aws eks --region eu-west-1 update-kubeconfig --name go-test-cluster
+          kubectl apply -f service.yaml
+          kubectl apply -f deployment.yaml        
 workflows:
   version: 2
-  build_and_deploy:
+  build:
     jobs:
-      - build
-      - deploytoeks
+      - buildanddeploy:
+          context: SonarCloud
+      
           
