--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,15 +26,20 @@ jobs:
       - run: |
           sudo apt-get update -y 
           # TAG=0.2.$CIRCLE_BUILD_NUM            
-          # CIRCLE_TAG=0.1.$CIRCLE_BUILD_NUM 
-          CIRCLE_TAG=`git name-rev --tags --name-only $(git rev-parse HEAD)`
+          CIRCLE_TAG=0.1.$CIRCLE_BUILD_NUM
+          echo "$CIRCLE_TAG" 
+          # CIRCLE_TAG=`git name-rev --tags --name-only $(git rev-parse HEAD)`
            
           echo TAG=0.2.$CIRCLE_BUILD_NUM            
           # docker build -t vijyant97/circleci:${TAG} .
-          docker build -t vijyant97/circleci:${CIRCLE_TAG} .
+          # docker build -t vijyant97/circleci .
           docker images  
       - run: |    
-          # docker tag vijyant97/circleci:${TAG} vijyant97/circleci:${TAG}
+          # docker tag vijyant97/circleci vijyant97/circleci:1.0.0
+          ID=$(docker build  -t vijyant97/circleci  .  | tail -1 | sed 's/.*Successfully built \(.*\)$/\1/')
+
+          docker tag ${ID} ${IMAGE}:${VERSION}
+          docker tag -f ${ID} ${IMAGE}:latest
           echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin
       - run: |
           
