--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,9 +26,9 @@ jobs:
       - run: |    
           echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin
       - run: |          
-          docker run aquasec/trivy image vijyant97/circleci:${CIRCLE_TAG} 
+          docker run aquasec/trivy image vijyant97/circleci:${TAG} 
       - run: |    
-          docker push -a vijyant97/circleci
+          docker push -a vijyant97/circleci:${TAG}
       - run: |  
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
           unzip awscliv2.zip 
