--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,15 +20,15 @@ jobs:
       # build and push Docker image and deploy to aws-eks
       - run: |
           sudo apt-get update -y 
-          TAG=0.3.$CIRCLE_BUILD_NUM            
-          docker build -t vijyant97/circleci:${TAG} .
-          docker images  
+          CIRCLE_TAG=0.3.$CIRCLE_BUILD_NUM            
+          docker build -t vijyant97/circleci:${CIRCLE_TAG} .
+            
       - run: |    
           echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin
       - run: |          
-          docker run aquasec/trivy image vijyant97/circleci:${TAG} 
+          docker run aquasec/trivy image vijyant97/circleci:${CIRCLE_TAG} 
       - run: |    
-          docker push -a vijyant97/circleci:${TAG}
+          docker push -a vijyant97/circleci:${CIRCLE_TAG}
       - run: |  
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
           unzip awscliv2.zip 
