--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
       # build and push Docker image and deploy to aws-eks
       - run: |
           sudo apt-get update -y 
-          CIRCLE_TAG = 0.3.CIRCLE_BUILD_NUM            
+          CIRCLE_TAG = 0.3.${CIRCLE_BUILD_NUM}            
           docker build -t vijyant97/circleci:${CIRCLE_TAG} .
             
       - run: |    
