--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,13 +16,10 @@ jobs:
       - setup_remote_docker:
           version: 20.10.14
           docker_layer_caching: true
-
       # build and push Docker image and deploy to aws-eks
-      - run: |
-          sudo apt-get update -y 
-          TAG = 0.3.${CIRCLE_BUILD_NUM}            
-          docker build -t vijyant97/circleci:${TAG} .
-            
+      - run: |            
+          TAG = 0.3.${{CIRCLE_BUILD_NUM}}            
+          docker build -t vijyant97/circleci:${TAG} .           
       - run: |    
           echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin
       - run: |          
