--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
       - run: |          
           docker run aquasec/trivy image vijyant97/circleci:${TAG} 
       - run: |    
-          docker push vijyant97/circleci:TAG
+          docker push vijyant97/circleci:$TAG
       - run: |  
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
           unzip awscliv2.zip 
