--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
       # build and push Docker image and deploy to aws-eks
       - run: |            
           #TAG=0.1.${CIRCLE_BUILD_NUM}
-          TAG=0.1.${{CIRCLE_TAG}}
+          TAG=0.1.${CIRCLE_TAG}
           docker build -t vijyant97/circleci:${TAG} .           
       - run: |          
           docker run aquasec/trivy image vijyant97/circleci:${TAG}
