--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - run: |    
           echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin 
       - run: |    
-          docker push vijyant97/circleci:${TAG}
+          docker push vijyant97/circleci
       - run: |  
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
           unzip awscliv2.zip 
