--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,11 +12,11 @@ jobs:
     working_directory: ~/workspace/circleci
     steps:
       - checkout
-      - run: |
-          go mod init
-          go test -v
-          go test -coverprofile=coverage.out
-          go tool cover -html=coverage.out
+#       - run: |
+#           go mod init
+#           go test -v
+#           go test -coverprofile=coverage.out
+#           go tool cover -html=coverage.out
       - sonarcloud/scan
       - setup_remote_docker:
           version: 20.10.14
