--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
-sonar.projectKey=circleci_clops_cicd
-sonar.projectName=clops_cicd_poc
+sonar.projectKey=vijyantg_clops_cicd_poc
+sonar.organization=vijyantg
+# sonar.projectKey=circleci_clops_cicd
+# sonar.projectName=clops_cicd_poc
 sonar.projectVersion=1.0
 sonar.sources=.
-sonar.organization=vijyantg
