--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,17 @@
 version: 2.1
 orbs:
   sonarcloud: sonarsource/sonarcloud@1.1.1
+  go: travelaudience/go@0.8.0
+parameters:
+  coverprofile:
+    default: cover-source.out
+    description: file to save coverage profile
+    type: string  
+  exec:
+    description: >-
+      Executor to use for this job (as described in the executor of this orb,
+      this requires CC_TEST_REPORTER_ID env var)
+    type: executor
 jobs:
   buildanddeploy:
     docker:
@@ -12,15 +23,17 @@ jobs:
     working_directory: ~/workspace/circleci
     steps:
       - checkout
-      - run: |
-          pwd
-          ls -lart
-      - run: |         
-          go test -v main_test.go
-          go test -cover
-          #go test -coverprofile=coverage.out
-          #go tool cover -html=coverage.out
-          #go tool cover -func=coverage-report.out
+      - go/test:
+          coverprofile:coverage.out
+#       - run: |
+#           pwd
+#           ls -lart
+#       - run: |         
+#           go test -v main_test.go
+#           go test -cover
+#           go test -coverprofile=coverage.out
+#           go tool cover -html=coverage.out
+#           go tool cover -func=coverage-report.out
       - sonarcloud/scan
       - setup_remote_docker:
           version: 20.10.14
