--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,11 +3,11 @@ orbs:
   sonarcloud: sonarsource/sonarcloud@1.1.1
   go: travelaudience/go@0.8.0
 # executor:
-# parameters:
-#   coverprofile:
-#     default: cover-source.out
-#     description: file to save coverage profile
-#     type: string  
+parameters:
+  coverprofile:
+    default: cover-source.out
+    description: file to save coverage profile
+    type: string  
 #   exec:
 #     description: >-
 #       Executor to use for this job (as described in the executor of this orb,
