--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,49 +1,27 @@
 version: 2.1
 orbs:
   sonarcloud: sonarsource/sonarcloud@1.1.1
-  go: travelaudience/go@0.8.0
-executors:
-  golang-executor:
+  golang: xav/golang@1.0.0   
 parameters:
-  coverprofile:
-    default: cover-source.out
-    description: file to save coverage profile
+  coverage-report-path:
+    default: coverage.out
+    description: |
+      Path to go coverage report output (go test -coverprofile=coverage.out)
     type: string  
-#   exec:
-#     description: >-
-#       Executor to use for this job (as described in the executor of this orb,
-#       this requires CC_TEST_REPORTER_ID env var)
-#     type: executor
-#   covermode:
-#     default: atomic
-#     description: >
-#       flag to set the coverage mode
-
-#       (the go default is: "set", unless -race is enabled, in which case the go
-#       default is "atomic")
-#     enum:
-#       - set
-#       - count
-#       - atomic
-#     type: enum    
-     
 jobs:
   buildanddeploy:
     docker:
       - image: cimg/go:1.17
-        environment:
-          CC_TEST_REPORTER_ID: 123ABC
+        environment: 
           AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
           AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
           AWS_DEFAULT_REGION: $AWS_REGION
     working_directory: ~/workspace/circleci
     steps:
       - checkout
-      - go/test_and_coverage:
-          additional_flags: '--prefix=v3'
-          exec: golang-executor
-#       - go/test:
-#             coverprofile:coverage.out
+      - go test \
+        -coverprofile 
+
 #       - run: |
 #           pwd
 #           ls -lart
